--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.21
-loader_version=0.9.0+build.204
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.15.2
 
 # Mod Properties
 mod_version=1.0.1
@@ -14,5 +14,4 @@ archives_base_name=trash-it
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.16.0+build.384-1.16.1
-spinnery_version=3.1.14+fabric-1.16.x
+fabric_version=0.91.0+1.20.1
